--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@remotion/tailwind": "4.0.192",
     "aws-amplify": "^6.5.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.3.28",
     "next": "^13.4.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
