add: login nextauth, view/edit profile

--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@remotion/player": "4.0.192",
     "@remotion/shapes": "4.0.192",
     "@remotion/tailwind": "4.0.192",
+    "@types/js-cookie": "^3.0.6",
     "aws-amplify": "^6.5.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.3.28",
+    "mongoose": "^8.5.3",
     "next": "^13.4.13",
+    "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remotion": "4.0.192",
