--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "aws-amplify": "^6.5.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.3.28",
+    "midtrans-client": "^1.3.1",
     "mongoose": "^8.5.3",
     "next": "^13.4.13",
     "next-auth": "^4.24.7",
