--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@remotion/shapes": "4.0.192",
     "@remotion/tailwind": "4.0.192",
     "@types/js-cookie": "^3.0.6",
+    "@uploadthing/react": "^6.7.2",
     "aws-amplify": "^6.5.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.3.28",
@@ -28,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remotion": "4.0.192",
+    "remotion-animated": "^2.1.0",
     "tailwind-merge": "^2.2.2",
     "zod": "3.22.3"
   },
@@ -47,8 +49,8 @@
     "typescript": "^5.4.5"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "cp .env.dev .env && next dev",
+    "build": "cp .env.production .env && next build",
     "start": "next start",
     "lint": "eslint .",
     "remotion": "remotion studio",
