--- a/.env.production
+++ b/.env.production
@@ -12,3 +12,5 @@ UPLOADTHING_APP_ID=w8otmc8m31
 
 NEXT_PUBLIC_DATABASE_CONNECT = "mongodb+srv://ituaga42:sMCAxebh8uBptbFy@cluster0.wwecvcn.mongodb.net/?retryWrites=true&w=majority"
 NEXT_PUBLIC_DATABASE_NAME = "videoklik_production"
+
+NEXTAUTH_URL = "https://videoklik.com"
