tweak: nextauth_url

--- a/.env.production
+++ b/.env.production
@@ -13,4 +13,4 @@ UPLOADTHING_APP_ID=w8otmc8m31
 NEXT_PUBLIC_DATABASE_CONNECT = "mongodb+srv://ituaga42:sMCAxebh8uBptbFy@cluster0.wwecvcn.mongodb.net/?retryWrites=true&w=majority"
 NEXT_PUBLIC_DATABASE_NAME = "videoklik_production"
 
-NEXTAUTH_URL = "https://videoklik.com"
+NEXTAUTH_URL = https://videoklik.com
