--- a/.env.dev
+++ b/.env.dev
@@ -13,4 +13,5 @@ UPLOADTHING_APP_ID=w8otmc8m31
 NEXT_PUBLIC_DATABASE_CONNECT = "mongodb+srv://ituaga42:sMCAxebh8uBptbFy@cluster0.wwecvcn.mongodb.net/?retryWrites=true&w=majority"
 NEXT_PUBLIC_DATABASE_NAME = "videoklik"
 
-NEXTAUTH_URL = "http://localhost:3000"
+NEXTAUTH_URL = http://localhost:3000
+# NEXTAUTH_SECRET = "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"
