--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
-REMOTION_AWS_ACCESS_KEY_ID="AKIAS252WMUHZXR2IWP2"
-REMOTION_AWS_SECRET_ACCESS_KEY="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"
+NEXT_REMOTION_AWS_ACCESS_KEY_ID="AKIAS252WMUHZXR2IWP2"
+NEXT_REMOTION_AWS_SECRET_ACCESS_KEY="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"
 
 NEXT_PUBLIC_MIDTRANS_AUTH = "Basic U0ItTWlkLXNlcnZlci1SbS1XVnFMOUFmbjJVckxxYU9rQ0FyRFU6"
 NEXT_PUBLIC_MIDTRANS_SNAP_URL = "https://app.sandbox.midtrans.com/snap/v1/transactions"
@@ -13,5 +13,5 @@ UPLOADTHING_APP_ID=w8otmc8m31
 NEXT_PUBLIC_DATABASE_CONNECT = "mongodb+srv://ituaga42:sMCAxebh8uBptbFy@cluster0.wwecvcn.mongodb.net/?retryWrites=true&w=majority"
 NEXT_PUBLIC_DATABASE_NAME = "videoklik"
 
-NEXTAUTH_URL = http://localhost:3000
+NEXTAUTH_URL = http://localhost:3000/api/auth
 # NEXTAUTH_SECRET = "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"
