tweak: nextauth env

--- a/.env.production
+++ b/.env.production
@@ -14,4 +14,8 @@ NEXT_PUBLIC_DATABASE_CONNECT = "mongodb+srv://ituaga42:sMCAxebh8uBptbFy@cluster0
 NEXT_PUBLIC_DATABASE_NAME = "videoklik_production"
 
 # NEXTAUTH_URL = https://videoklik.com/api/auth
-NEXTAUTH_URL=https://videoklik.com
+# NEXTAUTH_URL=https://videoklik.com
+
+NEXTAUTH_URL=https://videoklik.com/
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
+NEXTAUTH_SECRET=xk1rv1n54y9ZzMPijyrALBMBjTCIpiumViUWZl257Rw=
