--- a/.env.dev
+++ b/.env.dev
@@ -13,6 +13,6 @@ UPLOADTHING_APP_ID=w8otmc8m31
 NEXT_PUBLIC_DATABASE_CONNECT = "mongodb+srv://ituaga42:sMCAxebh8uBptbFy@cluster0.wwecvcn.mongodb.net/?retryWrites=true&w=majority"
 NEXT_PUBLIC_DATABASE_NAME = "videoklik"
 
-NEXTAUTH_URL=https://videoklik.com/
+NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
 NEXTAUTH_SECRET=xk1rv1n54y9ZzMPijyrALBMBjTCIpiumViUWZl257Rw=
